welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:9: error: not found: value i
    if (i==1){avance(4)}
        ^